<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo_app"
    android:orientation="vertical"
    tools:context=".SimbologiaActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/baumans"
        android:text="@string/mensaje_simbologia"
        android:textColor="@color/color_texto"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="293dp"
        android:layout_height="197dp"
        android:layout_marginStart="73dp"
        android:layout_marginLeft="73dp"
        android:layout_marginTop="316dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/rbRespuesta1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/baumans"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/rbRespuesta2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/baumans"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/rbRespuesta3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/baumans"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/rbRespuesta4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/baumans"
            android:textSize="18sp" />
    </RadioGroup>

    <ImageView
        android:id="@+id/imageSimbologia"
        android:layout_width="284dp"
        android:layout_height="180dp"
        android:layout_marginStart="63dp"
        android:layout_marginLeft="63dp"
        android:layout_marginTop="82dp"
        android:contentDescription="@string/descripcion_simbologia"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/simbologia1" />

    <Button
        android:id="@+id/bSiguiente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="149dp"
        android:layout_marginLeft="149dp"
        android:layout_marginTop="560dp"
        android:text="@string/siguiente"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvPuntuacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="151dp"
        android:layout_marginLeft="151dp"
        android:layout_marginTop="269dp"
        android:background="@color/fondo_amarillo"
        android:fontFamily="@font/baumans"
        android:text="@string/puntuacion_inicial"
        android:textColor="@android:color/secondary_text_light"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>