<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_resistencia"
    android:clickable="false"
    android:orientation="vertical"
    tools:context=".ResistenciasActivity">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginLeft="29dp"
        android:layout_marginBottom="11dp"
        android:fontFamily="@font/baumans"
        android:text="@string/multiplicador"
        android:textColor="@color/color_texto"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/b_multiplicador"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginLeft="29dp"
        android:layout_marginBottom="12dp"
        android:fontFamily="@font/baumans"
        android:text="@string/tolerancia"
        android:textColor="@color/color_texto"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/b_tolerancia"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/baumans"
        android:text="@string/calculadora"
        android:textColor="@color/color_texto"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="70dp"
        android:text="@string/subtitulo_calculadora"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvResultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="184dp"
        android:fontFamily="@font/baumans"
        android:text="TextView"
        android:textColor="@color/purple_500"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginLeft="29dp"
        android:layout_marginTop="311dp"
        android:fontFamily="@font/baumans"
        android:text="@string/banda1"
        android:textColor="@color/color_texto"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginLeft="29dp"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/baumans"
        android:text="@string/banda2"
        android:textColor="@color/color_texto"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Button
        android:id="@+id/b_salir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="71dp"
        android:text="@string/b_salir"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b_tolerancia" />

    <Button
        android:id="@+id/b_banda1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="51dp"
        android:layout_marginLeft="51dp"
        android:layout_marginBottom="15dp"
        app:backgroundTint="@color/marron"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintStart_toEndOf="@+id/textView4" />

    <Button
        android:id="@+id/b_banda2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:backgroundTint="@color/negro"
        app:layout_constraintStart_toStartOf="@+id/b_banda1"
        app:layout_constraintTop_toBottomOf="@+id/b_banda1" />

    <Button
        android:id="@+id/b_multiplicador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:backgroundTint="@color/negro"
        app:layout_constraintStart_toStartOf="@+id/b_banda2"
        app:layout_constraintTop_toBottomOf="@+id/b_banda2" />

    <Button
        android:id="@+id/b_tolerancia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:backgroundTint="@color/plata"
        app:layout_constraintStart_toStartOf="@+id/b_multiplicador"
        app:layout_constraintTop_toBottomOf="@+id/b_multiplicador" />

    <Spinner
        android:id="@+id/spinner_banda1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="6dp"
        android:layout_marginRight="6dp"
        android:layout_marginBottom="10dp"
        android:entries="@array/colores_sin_negro"
        app:layout_constraintBottom_toBottomOf="@+id/b_banda1"
        app:layout_constraintEnd_toEndOf="parent" />

    <Spinner
        android:id="@+id/spinner_banda2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="6dp"
        android:layout_marginRight="6dp"
        android:layout_marginBottom="9dp"
        android:entries="@array/colores"
        app:layout_constraintBottom_toBottomOf="@+id/b_banda2"
        app:layout_constraintEnd_toEndOf="parent" />

    <Spinner
        android:id="@+id/spinner_multiplicador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="6dp"
        android:layout_marginRight="6dp"
        android:entries="@array/colores"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_banda2" />

    <Spinner
        android:id="@+id/spinner_tolerancia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="7dp"
        android:layout_marginRight="7dp"
        android:entries="@array/colores_tolerancia"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/b_tolerancia" />

    <Button
        android:id="@+id/b_banda1_imagen"
        android:layout_width="24dp"
        android:layout_height="88dp"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="100dp"
        app:backgroundTint="@color/marron"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="@color/negro"
        app:strokeWidth="2dp" />

    <Button
        android:id="@+id/b_tolerancia_imagen"
        android:layout_width="24dp"
        android:layout_height="89dp"
        android:layout_marginStart="268dp"
        android:layout_marginLeft="268dp"
        android:layout_marginTop="100dp"
        app:backgroundTint="@color/plata"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="@color/negro"
        app:strokeWidth="2dp" />

    <Button
        android:id="@+id/b_banda2_imagen"
        android:layout_width="20dp"
        android:layout_height="75dp"
        android:layout_marginStart="132dp"
        android:layout_marginLeft="132dp"
        android:layout_marginTop="104dp"
        app:backgroundTint="@color/negro"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="@color/negro"
        app:strokeWidth="2dp" />

    <Button
        android:id="@+id/b_multiplicador_imagen"
        android:layout_width="21dp"
        android:layout_height="74dp"
        android:layout_marginStart="196dp"
        android:layout_marginLeft="196dp"
        android:layout_marginTop="104dp"
        app:backgroundTint="@color/negro"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="@color/negro"
        app:strokeWidth="2dp" />

</androidx.constraintlayout.widget.ConstraintLayout>